Move dependencies